--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body class="bg-color-white">
-
+<h2>Çamay</h2>
     <!-- üstünde ilk deneme yaptığım navbar. 
         <nav class="nav nav-pills flex-column flex-sm-row justify-content-end fixed-top bg-color-dark-blue">
             <a class="nav-brand" href="#home">Site Adı</a>
