--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     </script>
 
     <!-- navigation transparent -->
-    <h1> başlık </h1>
+    <h1>ihsan</h1>
     <script>
         $(window).scroll(function () {
             $('nav').toggleClass('scrolled', $(this).scrollTop() > 10);
