--- a/index.html
+++ b/index.html
@@ -110,23 +110,24 @@
         </div>
     </section>
 
-    <section id="about">
+    <section id="about" class=" bg-color-white">
         <div style="height: 4.5vw;"></div>
-        <div class="bordered-section bg-color-white text-center color-dark-blue py-2 "
-            style="font-size: 3vw; letter-spacing: .75rem;">
-            <p>HAKKINDA</p>
+        <div class="bordered-section text-center color-dark-blue py-2 " style="font-size: 3vw; letter-spacing: .75rem;">
+            <p>ABOUT</p>
         </div>
         <div class="container pb-5" style="height:fit-content">
             <div class="row">
                 <div id="aboutText" data-aos="fade-right" class="col-sm-12 col-md-5 mr-md-5"
                     style="padding:10px 30px; border-radius: 10px; line-height: 1.5; letter-spacing: .10rem;">
-                    <p style="text-indent: 3vw;">I am <strong>jane Doe</strong>, a travel photographer and writer who believes that images
+                    <p style="text-indent: 3vw;">I am <strong>jane Doe</strong>, a travel photographer and writer who
+                        believes that images
                         and words have the power to inspire meaningful change. My photos of the great outdoors spark
                         curiosity and my social media channels and blog create a space for connection with people of
                         similar passions to this world and each other.
                     </p>
                     <br><br>
-                    <p style="text-indent: 3vw;">I am a <strong>Sony Alpha Ambassador</strong> based out of Los Angeles – but you’d be hard pressed to find me
+                    <p style="text-indent: 3vw;">I am a <strong>Sony Alpha Ambassador</strong> based out of Los Angeles
+                        – but you’d be hard pressed to find me
                         sharing the incredible diversity that exists on our planet, and the connection each one of us
                         has to it and to each other.
                     </p>
@@ -144,16 +145,62 @@
     </section>
 
     <section id="blog">
-    
+        <div class="position-relative" data-aos="fade-up" style="height:1000px;">
+            <div class="carousel-box bg-color-grey position-absolute">
+                <div id="carouselIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+                    <ol class="carousel-indicators fixed-bottom">
+                        <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block mx-auto py-3 " src="./images/1.jpg" alt="First slide">
+                            <h5 class="text-center color-white">Jane Doe</h5>
+                            <div class="carousel-text p-2">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error dolorem earum doloribus
+                                    hic at, accusantium aut esse aliquid fugit velit, temporibus praesentium necessitatibus
+                                    veniam quibusdam expedita labore fugiat harum nisi reprehenderit!
+                                </p> 
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block mx-auto py-3" src="./images/2.jpg" alt="Second slide">
+                            <h5 class="text-center color-white">Jane Doe</h5>
+                            <div class="carousel-text p-2">
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, sunt eum?
+                                    Voluptates minus repellat vel optio, quae eligendi culpa, quaerat sit ea qui, sed!
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block mx-auto py-3" src="./images/3.jpg" alt="Third slide">
+                            <h5 class="text-center color-white">Jane Doe</h5>
+                            <div class="carousel-text p-2">
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, sunt eum?
+                                    Voluptates minus repellat vel optio, quae eligendi culpa, quaerat sit ea qui, sed
+                                    cumque
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id="contact">
     </section>
 
     <footer>
-        <div class="container-fluid bg-color-dark-blue text-center color-white fixed-bottom">
-            FOOTER
-        </div>
     </footer>
 
 
@@ -184,7 +231,7 @@
     <script>
         $(document).ready(function () {
             // Add smooth scrolling to all links
-            $("a").on('click', function (event) {
+            $(".nav-link").on('click', function (event) {
 
                 // Make sure this.hash has a value before overriding default behavior
                 if (this.hash !== "") {
