data-aos yeri değiştirildi.

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
     </section>
 
     <section id="blog">
-        <div class="position-relative" data-aos="fade-up" style="height:1000px;">
-            <div class="carousel-box bg-color-grey position-absolute">
+        <div class="position-relative" style="height:1000px;">
+            <div class="carousel-box bg-color-grey position-absolute" data-aos="fade-up">
                 <div id="carouselIndicators" class="carousel slide carousel-fade" data-ride="carousel">
                     <ol class="carousel-indicators fixed-bottom">
                         <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
