--- a/index.html
+++ b/index.html
@@ -29,43 +29,8 @@
 </head>
 
 <body class="bg-color-white">
-    <!-- üstünde ilk deneme yaptığım navbar. 
-        <nav class="nav nav-pills flex-column flex-sm-row justify-content-end fixed-top bg-color-dark-blue">
-            <a class="nav-brand" href="#home">Site Adı</a>
-            <a class="px-5 text-sm-center nav-link" href="#home">Ana Sayfa</a>
-            <a class="px-5 text-sm-center nav-link" href="#about">Hakkında</a>
-            <a class="px-5 text-sm-center nav-link" href="#projects">Projeler</a>
-            <a class="px-5 text-sm-center nav-link" href="#contact">İletişim</a>
-          </nav> -->
-
-    <!-- asıl olan 
-            
-            <nav class="navbar nav-pills navbar-expand-md navbar-dark bg-color-dark-blue fixed-top">
-            <a class="navbar-brand text-white" href="#home"><i class="fab fa-angrycreative"
-                    style="font-size:3.5vw; margin-left:40%;"></i></a>
-            <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupport"
-                aria-controls="navbarSupport" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupport" style="text-shadow: .5px .5px 3px black;">
-                <ul class="navbar-nav ml-auto">
-                    <li class="px-4 nav-item">
-                        <a class="nav-link " href="#home">Ana Sayfa</a>
-                    </li>
-                    <li class="px-4 nav-item">
-                        <a class="nav-link" href="#about">Hakkında</a>
-                    </li>
-                    <li class="px-4 nav-item">
-                        <a class="nav-link" href="#projects">Projeler</a>
-                    </li>
-                    <li class="px-4 nav-item">
-                        <a class="nav-link" href="#contact">İletişim</a>
-                    </li>
-                </ul>
-            </div>
-        </nav> -->
     <header>
-        <nav class="navbar nav-pills navbar-expand-md navbar-dark bg-color-dark-blue fixed-top">
+        <nav class="navbar nav-pills navbar-expand-md navbar-dark fixed-top">
             <a class="navbar-brand text-white" href="#home"><i class="fab fa-angrycreative"
                     style="font-size:3.5vw; margin-left:40%;"></i></a>
             <a class="navbar-toggler collapsed border-0" type="button" data-toggle="collapse"
@@ -110,13 +75,14 @@
 
     <section id="about" class=" bg-color-white">
         <div style="height: 4.5vw;"></div>
-        <div class="bordered-section text-center color-dark-blue py-2 " data-aos="fade-up" style="font-size: 3vw; letter-spacing: .75rem;">
+        <div class="bordered-section text-center color-dark-blue py-2 " data-aos="fade-up"
+            style="font-size: 3vw; letter-spacing: .75rem;">
             <p>ABOUT</p>
         </div>
         <div class="container pb-5" style="height:fit-content">
             <div class="row">
                 <div id="aboutText" data-aos="fade-up" class="col-sm-12 col-md-5 mr-md-5"
-                    style="padding:10px 30px; border-radius: 10px; line-height: 1.5; letter-spacing: .10rem;">
+                    style="padding:10px 30px; line-height: 1.5; letter-spacing: .10rem;">
                     <p style="text-indent: 3vw;">I am <strong>jane Doe</strong>, a travel photographer and writer who
                         believes that images
                         and words have the power to inspire meaningful change. My photos of the great outdoors spark
@@ -132,7 +98,7 @@
                 </div>
                 <div data-aos="fade-up" class="card col-sm-12 col-md-5 ml-md-5 bg-color-white border-0"
                     style="padding: 10px 30px;">
-                    <img class="card-img-top" style="border-radius: 50%;" src="./images/jane_doe.jpg" alt="jane doe">
+                    <img class="card-img-top rounded-circle" src="./images/jane_doe.jpg" alt="jane doe">
                     <div class="card-body">
                         <h1 class="card-title text-center"
                             style="font-family: 'Dancing Script', cursive; font-weight: 700;"> Jane Doe</h1>
@@ -144,7 +110,8 @@
 
     <section id="blog">
         <div style="height: 4.5vw;"></div>
-        <div class="bordered-section text-center color-dark-blue py-2 " data-aos="fade-up" style="font-size: 3vw; letter-spacing: .75rem;">
+        <div class="bordered-section text-center color-dark-blue py-2 " data-aos="fade-up"
+            style="font-size: 3vw; letter-spacing: .75rem;">
             <p>BLOG</p>
         </div>
         <div class="container">
@@ -152,7 +119,8 @@
                 <div class="px-1 flex-column col-lg col-md-6">
                     <a href="#">
                         <div class="position-relative">
-                            <img class="img-fluid d-block mt-2" src="./images/bayreuth.jpg" data-aos="fade-up" alt="bayreuth">
+                            <img class="img-fluid d-block mt-2" src="./images/bayreuth.jpg" data-aos="fade-up"
+                                alt="bayreuth">
                             <div class="overlay position-absolute h-100 w-100">
                                 <div class="overlay-text color-white position-absolute text-center">
                                     Bayreuth
@@ -162,7 +130,8 @@
                     </a>
                     <a href="#">
                         <div class="position-relative">
-                            <img class="img-fluid d-block mt-2" src="./images/cluj_napoca.jpg" data-aos="fade-up" alt="cluj_napoca">
+                            <img class="img-fluid d-block mt-2" src="./images/cluj_napoca.jpg" data-aos="fade-up"
+                                alt="cluj_napoca">
                             <div class="overlay position-absolute h-100 w-100">
                                 <div class="overlay-text color-white position-absolute text-center">
                                     Cluj Napoca
@@ -172,7 +141,8 @@
                     </a>
                     <a href="#">
                         <div class="position-relative">
-                            <img class="img-fluid d-block mt-2" src="./images/london.jpg" data-aos="fade-up" alt="london">
+                            <img class="img-fluid d-block mt-2" src="./images/london.jpg" data-aos="fade-up"
+                                alt="london">
                             <div class="overlay position-absolute h-100 w-100">
                                 <div class="overlay-text color-white position-absolute text-center">
                                     London
@@ -204,7 +174,8 @@
                     </a>
                     <a href="#">
                         <div class="position-relative">
-                            <img class="img-fluid d-block mt-2" src="./images/costa_rica.jpg" data-aos="fade-up" alt="costa_rica">
+                            <img class="img-fluid d-block mt-2" src="./images/costa_rica.jpg" data-aos="fade-up"
+                                alt="costa_rica">
                             <div class="overlay position-absolute h-100 w-100">
                                 <div class="overlay-text color-white position-absolute text-center">
                                     Costa Rica
@@ -216,7 +187,8 @@
                 <div class="px-1 flex-column col-lg col-md-6">
                     <a href="#">
                         <div class="position-relative">
-                            <img class="img-fluid d-block mt-2" src="./images/golden_gate_bridge.jpg" data-aos="fade-up" alt="golden_gate_bridge">
+                            <img class="img-fluid d-block mt-2" src="./images/golden_gate_bridge.jpg" data-aos="fade-up"
+                                alt="golden_gate_bridge">
                             <div class="overlay position-absolute h-100 w-100">
                                 <div class="overlay-text color-white position-absolute text-center">
                                     Golden Gate Bridge
@@ -226,8 +198,8 @@
                     </a>
                     <a href="#">
                         <div class="position-relative">
-                            <img class="img-fluid d-block mt-2" src="./images/lamington_national_park.jpg" data-aos="fade-up"
-                                alt="lamington_national_park">
+                            <img class="img-fluid d-block mt-2" src="./images/lamington_national_park.jpg"
+                                data-aos="fade-up" alt="lamington_national_park">
                             <div class="overlay position-absolute h-100 w-100">
                                 <div class="overlay-text color-white position-absolute text-center">
                                     Lamington National Park
@@ -237,7 +209,8 @@
                     </a>
                     <a href="#">
                         <div class="position-relative">
-                            <img class="img-fluid d-block mt-2" src="./images/costa_rica_jungle.jpg" data-aos="fade-up" alt="costa_rica_jungle">
+                            <img class="img-fluid d-block mt-2" src="./images/costa_rica_jungle.jpg" data-aos="fade-up"
+                                alt="costa_rica_jungle">
                             <div class="overlay position-absolute h-100 w-100">
                                 <div class="overlay-text color-white position-absolute text-center">
                                     Costa Rica Jungle
@@ -249,7 +222,8 @@
                 <div class="px-1 flex-column col-lg col-md-6">
                     <a href="#">
                         <div class="position-relative">
-                            <img class="img-fluid d-block mt-2" src="./images/rusya_tver.jpg" data-aos="fade-up" alt="rusya_tver">
+                            <img class="img-fluid d-block mt-2" src="./images/rusya_tver.jpg" data-aos="fade-up"
+                                alt="rusya_tver">
                             <div class="overlay position-absolute h-100 w-100">
                                 <div class="overlay-text color-white position-absolute text-center">
                                     Rusya Tver
@@ -259,7 +233,8 @@
                     </a>
                     <a href="#">
                         <div class="position-relative">
-                            <img class="img-fluid d-block mt-2" src="./images/ses_illetes.jpg" data-aos="fade-up" alt="ses_illetes">
+                            <img class="img-fluid d-block mt-2" src="./images/ses_illetes.jpg" data-aos="fade-up"
+                                alt="ses_illetes">
                             <div class="overlay position-absolute h-100 w-100">
                                 <div class="overlay-text color-white position-absolute text-center">
                                     Ses Illetes
@@ -269,8 +244,8 @@
                     </a>
                     <a href="#">
                         <div class="position-relative">
-                            <img class="img-fluid d-block mt-2" src="./images/wildcat_den_state_park.jpg" data-aos="fade-up"
-                                alt="wildcat_den_state_park">
+                            <img class="img-fluid d-block mt-2" src="./images/wildcat_den_state_park.jpg"
+                                data-aos="fade-up" alt="wildcat_den_state_park">
                             <div class="overlay position-absolute h-100 w-100">
                                 <div class="overlay-text color-white position-absolute text-center">
                                     Wildcat Den State Park
@@ -279,9 +254,9 @@
                         </div>
                     </a>
                 </div>
-            </div> 
+            </div>
         </div>
-        <div class="carousel-box bg-color-grey my-3 mx-auto" data-aos="fade-up" style="width:65%">
+        <div class="carousel-box bg-color-grey my-3 mx-auto" data-aos="fade-up">
             <div id="carouselIndicators" class="carousel slide carousel-fade" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
@@ -290,19 +265,17 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block mx-auto py-3 " src="./images/1.jpg" alt="First slide">
+                        <img class="rounded-circle d-block mx-auto py-3 " src="./images/1.jpg" alt="First slide">
                         <h5 class="text-center color-white">Jane Doe</h5>
                         <div class="carousel-text py-2 pb-4">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error dolorem earum
-                                doloribus
-                                hic at, accusantium aut esse aliquid fugit velit, temporibus praesentium
-                                necessitatibus
-                                veniam quibusdam expedita labore fugiat harum nisi reprehenderit!
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia animi accusamus itaque
+                                numquam, delectus, fugit commodi porro assumenda aliquid reprehenderit dignissimos
+                                placeat tempora.
                             </p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block mx-auto py-3" src="./images/2.jpg" alt="Second slide">
+                        <img class="rounded-circle d-block mx-auto py-3" src="./images/2.jpg" alt="Second slide">
                         <h5 class="text-center color-white">Jane Doe</h5>
                         <div class="carousel-text py-2 pb-4">
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, sunt eum?
@@ -311,7 +284,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block mx-auto py-3" src="./images/3.jpg" alt="Third slide">
+                        <img class="rounded-circle d-block mx-auto py-3" src="./images/3.jpg" alt="Third slide">
                         <h5 class="text-center color-white">Jane Doe</h5>
                         <div class="carousel-text py-2 pb-4">
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, sunt eum?
