--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
 
     <section id="about" class=" bg-color-white">
         <div style="height: 4.5vw;"></div>
-        <div class="bordered-section text-center color-dark-blue py-2 " data-aos="fade-up"
-            style="font-size: 3vw; letter-spacing: .75rem;">
+        <div class="bordered-section text-center color-dark-blue py-2 " data-aos="fade-up">
             <p>ABOUT</p>
         </div>
         <div class="container pb-5" style="height:fit-content">
@@ -110,14 +109,13 @@
 
     <section id="blog">
         <div style="height: 4.5vw;"></div>
-        <div class="bordered-section text-center color-dark-blue py-2 " data-aos="fade-up"
-            style="font-size: 3vw; letter-spacing: .75rem;">
+        <div class="bordered-section text-center color-dark-blue py-2 " data-aos="fade-up">
             <p>BLOG</p>
         </div>
         <div class="container">
             <div class="row">
                 <div class="px-1 flex-column col-lg col-md-6">
-                    <a href="#">
+                    <a href="http://127.0.0.1:5500/single.html">
                         <div class="position-relative">
                             <img class="img-fluid d-block mt-2" src="./images/bayreuth.jpg" data-aos="fade-up"
                                 alt="bayreuth">
@@ -128,7 +126,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="http://127.0.0.1:5500/single.html">
                         <div class="position-relative">
                             <img class="img-fluid d-block mt-2" src="./images/cluj_napoca.jpg" data-aos="fade-up"
                                 alt="cluj_napoca">
@@ -139,7 +137,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="http://127.0.0.1:5500/single.html">
                         <div class="position-relative">
                             <img class="img-fluid d-block mt-2" src="./images/london.jpg" data-aos="fade-up"
                                 alt="london">
@@ -152,7 +150,7 @@
                     </a>
                 </div>
                 <div class=" px-1 flex-column col-lg col-md-6">
-                    <a href="#">
+                    <a href="http://127.0.0.1:5500/single.html">
                         <div class="position-relative">
                             <img class="img-fluid d-block mt-2" src="./images/atina.jpg" data-aos="fade-up" alt="atina">
                             <div class="overlay position-absolute h-100 w-100">
@@ -162,7 +160,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="http://127.0.0.1:5500/single.html">
                         <div class="position-relative">
                             <img class="img-fluid d-block mt-2" src="./images/dag.jpg" data-aos="fade-up" alt="dag">
                             <div class="overlay position-absolute h-100 w-100">
@@ -172,7 +170,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="http://127.0.0.1:5500/single.html">
                         <div class="position-relative">
                             <img class="img-fluid d-block mt-2" src="./images/costa_rica.jpg" data-aos="fade-up"
                                 alt="costa_rica">
@@ -185,7 +183,7 @@
                     </a>
                 </div>
                 <div class="px-1 flex-column col-lg col-md-6">
-                    <a href="#">
+                    <a href="http://127.0.0.1:5500/single.html">
                         <div class="position-relative">
                             <img class="img-fluid d-block mt-2" src="./images/golden_gate_bridge.jpg" data-aos="fade-up"
                                 alt="golden_gate_bridge">
@@ -196,7 +194,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="http://127.0.0.1:5500/single.html">
                         <div class="position-relative">
                             <img class="img-fluid d-block mt-2" src="./images/lamington_national_park.jpg"
                                 data-aos="fade-up" alt="lamington_national_park">
@@ -207,7 +205,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="http://127.0.0.1:5500/single.html">
                         <div class="position-relative">
                             <img class="img-fluid d-block mt-2" src="./images/costa_rica_jungle.jpg" data-aos="fade-up"
                                 alt="costa_rica_jungle">
@@ -220,7 +218,7 @@
                     </a>
                 </div>
                 <div class="px-1 flex-column col-lg col-md-6">
-                    <a href="#">
+                    <a href="http://127.0.0.1:5500/single.html">
                         <div class="position-relative">
                             <img class="img-fluid d-block mt-2" src="./images/rusya_tver.jpg" data-aos="fade-up"
                                 alt="rusya_tver">
@@ -231,7 +229,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="http://127.0.0.1:5500/single.html">
                         <div class="position-relative">
                             <img class="img-fluid d-block mt-2" src="./images/ses_illetes.jpg" data-aos="fade-up"
                                 alt="ses_illetes">
@@ -242,7 +240,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="http://127.0.0.1:5500/single.html">
                         <div class="position-relative">
                             <img class="img-fluid d-block mt-2" src="./images/wildcat_den_state_park.jpg"
                                 data-aos="fade-up" alt="wildcat_den_state_park">
