--- a/admin.html
+++ b/admin.html
@@ -19,8 +19,10 @@
 </head>
 
 <body class="bg-color-white">
+    
+     
 
-    <div class="row my-3 text-center justify-content-between mx-2">
+    <div class="row my-3 text-center justify-content-between mx-2 mt-5 pt-lg-5 ">
         <div class="bg-color-dark-blue rounded text-white col-md-3">
             BLOG
             <p>Blog Sayısı</p>
